test/bad/generics/def05.px

func f<Num T>(T x: 3) def
    return
